--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2",
     "@tanstack/react-query": "^5.62.7",
-    "axios": "^1.7.9",
-    "zustand": "^5.0.2",
+    "@tiptap/extension-link": "^2.9.3",
     "@tiptap/react": "^2.9.3",
     "@tiptap/starter-kit": "^2.9.3",
-    "@tiptap/extension-link": "^2.9.3",
-    "lucide-react": "^0.462.0",
+    "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "idb": "^8.0.0",
-    "workbox-window": "^7.1.0"
+    "lucide-react": "^0.462.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-joyride": "^2.9.3",
+    "react-router-dom": "^6.26.2",
+    "workbox-window": "^7.1.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.12",
